--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: glaser9/yamdb
+          tags: glaser9/infra_actions
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -80,7 +80,7 @@ jobs:
           sudo docker stop $(sudo docker ps -a -q)
           sudo docker run --rm -d -p 5000:5000 glaser9/infra_actions
 
-    send_message:
+  send_message:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
